# src/controllers/list/index.go
@@ -1,8 +1,8 @@
 package list
 
 import (
+	"core/Router"
 	"helpers/auth"
-	"lib/Router"
 )
 
 func Routes() {
@@ -10,4 +10,10 @@ func Routes() {
 	router := Router.Instance{Prefix: "/list"}
 
 	router.GET("/", controller.index, auth.IsAuthenticated)
+	router.GET("/{id}", controller.get, auth.IsAuthenticated)
+	router.DELETE("/{id}", controller.delete, auth.IsAuthenticated)
+	router.PATCH("/{id}", controller.update, auth.IsAuthenticated)
+
+	router.POST("/", controller.create, bodyCreate, auth.IsAuthenticated)
+
 }
