# src/controllers/user/validation.go
@@ -1,8 +1,8 @@
 package user
 
 import (
-	"lib/validation"
-	"lib/validation/types"
+	"core/validation"
+	"core/validation/types"
 )
 
 var checkBodySignUp = validation.IsValid("body", validation.MustBe{
@@ -10,4 +10,10 @@ var checkBodySignUp = validation.IsValid("body", validation.MustBe{
 	"firstName": types.String{Required: true, Min: 1},
 	"lastName":  types.String{Required: true, Min: 1},
 	"password":  types.String{Required: true, Min: 6, Max: 10},
+})
+
+var checkBodyUpdate = validation.IsValid("body", validation.MustBeOneOf{
+	"username":  types.String{Min: 1},
+	"firstName": types.String{Min: 1},
+	"lastName":  types.String{Min: 1},
 })
